Changing Front Image And Link

--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
   </head>
   <body>
     <!-- Add your code here, between the body tags. -->
-    <h1 id="top">Gritty FanBlog</h1>
-    <a href="https://www.youtube.com/watch?v=0IruShq2UzM" target="_blank"
+    <h1 id="top">Stormwatch</h1>
+    <a href="https://www.youtube.com/watch?v=_1HJsz1gKCw" target="_blank"
       >Press</a
     ><br />
-    <a href="about.html">About Me!</a><br />
+    <a href="about.html">Who is Storm?</a><br />
     <a href="welcome.html">
       <img
-        src="https://www.gannett-cdn.com/presto/2018/09/24/PCHH/59a3b3c0-2f08-4eca-86ec-1eca12f14911-Gritty.jpg?width=1200&disable=upscale&format=pjpg&auto=webp"
-        alt="Gritty in the void"
+        src="80a12d198b97e1b35457391d5a732d7b.jpg"
+        alt="Storm Flying Main Photo"
         height="200%"
       /> </a
     ><br />
