--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <img
         src="80a12d198b97e1b35457391d5a732d7b.jpg"
         alt="Storm Flying Main Photo"
-        width= 398 height="398%"
+        height="100%"
       /> </a
     ><br />
     <a href="#top">Go to top</a>
