--- a/about.html
+++ b/about.html
@@ -8,6 +8,6 @@
     <h1>
       About Me!
     </h1>
-    <img src="https://media.newyorker.com/photos/5bbd10430cdf452cf93ca22f/master/w_2560%2Cc_limit/Crouch-Gritty.jpg" alt="gritty skating" width="400"/>
+    <img src="abb764151fbd359e11b1738585674362.jpg" alt="gritty skating" width="400"/>
   </body>
 </html>
