new photo in about and photo link

--- a/about.html
+++ b/about.html
@@ -6,8 +6,8 @@
   </head>
   <body>
     <h1>
-      About Me!
+      About Storm
     </h1>
-    <img src="abb764151fbd359e11b1738585674362.jpg" alt="gritty skating" width="400"/>
+    <img src="62a90f56dcd6d04748de1743f3c6bf35.jpg" alt="Storm Through The Years" Width="15" Height="18"/>
   </body>
 </html>
